<resources>
    <string name="app_name">Spectator</string>
    <string name="general_comments" translatable="false">Write anything</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="title_activity_details">Details</string>
    <string name="spectator">Spectator</string>
    <string name="start_counting">Start Counting</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="hourly_amount" translatable="false">0</string>
    <string name="last_hour">Last hour</string>
    <string name="total_amount" translatable="false">0</string>
    <string name="grand_total">Grand total</string>
    <string name="date">Today is August 4</string>
    <string name="status">First day of preterm election</string>
    <string name="add_new_day">+ Add new day</string>
    <string name="separator" translatable="false">separator</string>
    <string name="mark_last">Leave\ncomment</string>
    <string name="count">Count</string>
    <string name="delete_last">Delete\nlast</string>
    <string name="done">Done</string>
    <string name="yik_placeholder">PEC number</string>
    <string name="yik_hint">Enter your PEC number</string>
    <string name="yik_prefix">PEC №</string>
    <string name="status_2">Primary election day</string>
    <string name="mark_icon" translatable="false">mark_icon</string>
    <string name="comment_hint">Enter your comment</string>
    <string name="info_icon" translatable="false">info_icon</string>
    <string name="delete_icon" translatable="false">delete_icon</string>
    <string name="info">Info</string>
    <string name="done_icon" translatable="false">done_icon</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="number_of_votes" translatable="false">TextView</string>
    <string name="date2" translatable="false">TextView</string>
    <string name="details">Details</string>
    <string name="graphs">Graphs</string>
    <string name="list">List</string>
    <string name="export_all_data">Export data</string>
    <string name="export_this_graph">Export this graph</string>
    <string name="voted_today">Voted Today</string>
    <string name="num" translatable="false">0</string>
    <string name="down_arrow_right" translatable="false">down_arrow_right</string>
    <string name="down_arrow_right_1" translatable="false">down_arrow_right_1</string>
    <string name="down_arrow_left" translatable="false">down_arrow_left</string>
    <string name="down_arrow_left_1" translatable="false">down_arrow_left_1</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="spacer" translatable="false">spacer</string>
    <string name="this_day">This day</string>
    <string name="number" translatable="false">TextView</string>
    <string name="time">Time</string>
    <string name="position">Position</string>
    <string name="use_dark_mode">Use Dark Mode</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="none">None</string>
    <string name="maximum">Maximum</string>
    <string name="language">Language</string>
    <string name="vibration">Vibration</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="belorussian">Belorussian</string>
    <string name="end_voting">Voting has ended</string>
    <string name="today">Today is: </string>
    <string name="bands">Bands</string>
    <string name="voters">Voters</string>
    <string name="first_day">First day of preterm elections</string>
    <string name="second_day">Second day of preterm elections</string>
    <string name="third_day">Third day of preterm elections</string>
    <string name="fourth_day">Fourth day of preterm elections</string>
    <string name="fifth_day">Fifth day of preterm elections</string>
    <string name="primary_day">Primary elections day</string>
    <string name="election_days">Elections are held from 4 to 9 of August</string>
    <string name="about_us_text">We are creating an app to help spectators on the Belarussian elections. Our aim is to create reliable and easy-to-use app that will effectively count voters who came to the elections.</string>
    <string name="start_new_counter">Start new counter</string>
    <string name="enter_voting_name">Enter voting name</string>
    <string name="hint">You can choose to count either of these or only one of these.</string>
    <string name="count_bands">Count white bands</string>
    <string name="count_votes">Count votes</string>
    <string name="day_exists">Day with this name already exists</string>
    <string name="choose_mode">Please choose a mode</string>
    <string name="enter_pec">Please enter a PEC number</string>
    <string name="enter_name">Please enter a name</string>
    <string name="bands_today">Bands today</string>
    <string name="bands_total">Bands total</string>
    <string name="other">Other</string>
    <string name="export_via">Export via</string>
    <string name="spectator_list">" spectator list"</string>
    <string name="data_saved">Data is saved</string>
    <string name="special_characters_denial">Special characters are not allowed here</string>
    <string name="count_bands_main">Count \nbands</string>
    <string name="count_votes_main">Count\n votes</string>
    <string name="delete_last_band">Delete\nlast band</string>
    <string name="delete_last_vote">Delete\nlast vote</string>
    <string name="leave_comment">Leave comment</string>
    <string name="votes">Votes</string>
    <string name="votes_last_hour">Votes last hour</string>
    <string name="bands_last_hour">Bands last hour</string>
    <string name="comments">Comments</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="menu_hint">Long tap on day tile to delete it.</string>
    <string name="copyright">v1.0\nCopyright © 2020 Pavel Sudnik, Richard Ragusski.</string>
    <string name="bug_contact">If you have spotted a bug or you want to propose new idea, please contact us at\nwintry3@gmail.com</string>
    <string name="show_comments">Show comments</string>
    <string name="swipe_up_to_see_more">Swipe up to see more</string>
    <string name="voters_suffix" translatable="false">.voters</string>
    <string name="json_postfix" translatable="false">.json</string>
    <string name="hourly_suffix" translatable="false">.hourly</string>
    <string name="bands_suffix" translatable="false">.bands</string>
    <string name="field_is_empty">Data isn\'t saved, field is empty</string>
    <string name="export_comments">Export comments</string>
    <string name="send_reminder">Don\'t forget to send your data to the server.</string>
    <string name="reminder_channel_title">Send data reminder</string>
    <string name="map">Map</string>
    <string name="permission_required_toast">Permission required to use geolocation</string>
    <string name="permission_rationale_location">Permission rationale location</string>
    <string name="location_permission_denied">Geolocation permission denied</string>
</resources>
