<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/daily_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/daily_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daily_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/voted_today"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/swipe_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_up_to_see_more"
            android:textColor="@color/hintWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>